feat: add Tech Stack Module and Project CountByStatus api
