# src/validation/projectValidation.js
@@ -5,13 +5,13 @@ exports.addProjectValidation = {
   body: Joi.object({
     projectName: Joi.string().required(),
     status: Joi.string()
-      .valid("inProgress", "Completed", "OnHold", "Pending", "Terminated")
+      .valid(...Object.values(PROJECT_STATUS))
       .required(),
     type: Joi.string().required(),
     clientName: Joi.string().required(),
     startDate: Joi.date().required(),
     endDate: Joi.date().allow(null, ""),
-    techStack: Joi.array().items(Joi.string()).allow(null),
+    techStackId: Joi.array().items(Joi.string().hex().length(24)).required(),
     description: Joi.string().allow("", null),
   }),
 };
@@ -42,7 +42,7 @@ exports.updateProjectValidation = {
     clientName: Joi.string(),
     startDate: Joi.date(),
     endDate: Joi.date().allow(null, ""),
-    techStack: Joi.array().items(Joi.string()).allow(null),
+    techStackId: Joi.array().items(Joi.string().hex().length(24)),
     description: Joi.string().allow("", null),
   }),
 
@@ -55,4 +55,11 @@ exports.deleteProjectValidation = {
   params: Joi.object({
     id: Joi.string().hex().length(24).required(),
   }),
+};
+
+exports.getProjectCountByStatusValidation = {
+  query: Joi.object({
+    startDate: Joi.date().optional(),
+    endDate: Joi.date().optional(),
+  }).and("startDate", "endDate"),
 };
